--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -122,7 +122,7 @@ font:
     style: italic
 
   # Point size
-  size: 17.0
+  size: 14.0
 
   # Offset is the extra space around each character. `offset.y` can be thought of
   # as modifying the line spacing, and `offset.x` as modifying the letter spacing.
@@ -340,7 +340,7 @@ cursor:
   #   - ▇ Block
   #   - _ Underline
   #   - | Beam
-  style: Beam
+  style: Block
 
   # If this is `true`, the cursor will be rendered as a hollow box when the
   # window is not focused.
