minor config changes to vscode

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -6,5 +6,8 @@
   "editor.fontFamily": "'Monofur Nerd Font', 'monospace'",
   "editor.tabSize": 2,
   "editor.formatOnSave": true,
-  "git.alwaysSignOff": true
+  "git.alwaysSignOff": true,
+  "files.autoSave": "afterDelay",
+  "files.autoSaveDelay": 5000,
+  "editor.fontSize": 13
 }
