--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -1,6 +1,6 @@
 {
   "editor.fontFamily": "'Monofur Nerd Font', 'monospace'",
-  "workbench.colorTheme": "Slack Theme Aubergine Dark",
+  "workbench.colorTheme": "Atom One Dark",
   "editor.columnSelection": false,
   "editor.multiCursorModifier": "ctrlCmd",
   "editor.fontFamily": "'Monofur Nerd Font', 'monospace'",
